[tool.poetry]
name = "chunker"
version = "1.0.0"
description = "Module for reading/writing chunk files."
authors = ["Romanin <semina054@gmail.com>"]
repository = "https://github.com/romanin-rf/Chunker"
license = "MIT"
readme = "README.md"
keywords = ["chunker", "chunkfile", "io", "file", "chunk", "read", "write"]
classifiers = [
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
