[tool.poetry]
name = "pychunker"
version = "1.4.1"
description = "Module for reading/writing chunk files."
authors = ["Romanin <semina054@gmail.com>"]
repository = "https://github.com/romanin-rf/pychunker"
license = "MIT"
readme = "README.md"
keywords = ["pychunker", "chunker", "chunkfile", "io", "file", "chunk", "read", "write"]
classifiers = [
    "Topic :: System :: Filesystems",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
